# convclasses

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  test.yml
bench/: bench.py
docs/: conf.py  converters.rst  index.rst  installation.rst  modifiers.rst  structuring.rst  unstructuring.rst  usage.rst
src/convclasses/: __init__.py  _compat.py  converters.py  disambiguators.py  gen.py  generation.py  modifiers.py  multistrategy_dispatch.py
tests/: __init__.py  _compat.py  conftest.py  test_dict_generation.py  test_disambigutors.py  test_function_dispatch.py  test_generics.py  test_multistrategy_dispatch.py  test_structure.py  test_structure_attrs.py  test_unstructure.py
tests/metadata/: __init__.py  test_roundtrips.py
