[flake8]
exclude = docs, convclasses/vendor
ignore = E203, E501, W503

[coverage:run]
omit =
    convclasses/_compat.py
    convclasses/vendor/typing.py
    convclasses/vendor/python3/typing.py

[coverage:paths]
source =
   src/convclasses
   .tox/*/lib/python*/site-packages/convclasses
   .tox/pypy*/site-packages/convclasses

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = -l